--- a/texts/zh_CN.lang
+++ b/texts/zh_CN.lang
@@ -1,4 +1,4 @@
-accessibility.chat.howtoopen=§3Element§bZero §f零度元素
+accessibility.chat.howtoopen=§3Element§bZero §f0号元素
 
 commands.generic.selector.empty=目标选择器结果为空。
 commands.generic.selector.tooManyTargets=目标选择器返回的结果太多。
