--- a/zh_TW.lang
+++ b/zh_TW.lang
@@ -11,7 +11,7 @@ commands.tpa.message.sent=%s 向您發起了傳送請求。
 commands.tpa.message.timeout=上一個傳送請求已經超時。
 commands.tpa.message.reject=傳送請求被拒絕。
 commands.tpa.success=傳送請求發送成功。
-commands.tpa.error.empty=當前沒有正在進行的傳送請求。
+commands.tpa.error.empty=目前沒有正在進行的傳送請求。
 commands.tpaccept.success=已接受來自 %s 的傳送請求。
 commands.tpdeny.success=已拒絕來自 %s 的傳送請求。
 commands.tpaccept.description=接受傳送請求。
